--- a/order-view.html
+++ b/order-view.html
@@ -252,6 +252,14 @@
                             <td>To'langan</td>
                           </tr>
                           <tr>
+                            <th>Visa</th>
+                            <td><a href="">Ochish</a></td>
+                          </tr>
+                          <tr>
+                            <th>Passport</th>
+                            <td><a href="">Ochish</a></td>
+                          </tr>
+                          <tr>
                             <th>Qo'shimcha ma'lumotlar</th>
                             <td>
                               Lorem ipsum dolor sit, amet consectetur recusandae
