--- a/tour.html
+++ b/tour.html
@@ -873,72 +873,74 @@
         <div class="layout-overlay layout-menu-toggle"></div>
       </div>
     </div>
-  </body>
 
-  <div class="modal fade" id="tourDetail" tabindex="-1" style="display: block;" aria-modal="true" role="dialog">
-    <div class="modal-dialog modal-lg modal-simple modal-enable-otp modal-dialog-centered">
-      <div class="modal-content p-3 p-md-5">
-        <div class="modal-body">
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            <h3 class="mb-3">Состав пакета</h3>
-            <div class="table-responsive mb-4">
-              <table class="table table-striped table-hover">
-                <tbody>
-                  <tr>
-                    <td>04.06.2024 - 04.06.2024</td>
-                    <td>Баку -> Ташкент, ECONOM</td>
-                  </tr>
-                  <tr>
-                    <td>04.06.2024 - 13.06.2024</td>
-                    <td>Вьетнам: INSURANCE</td>
-                  </tr>
-                  <tr>
-                    <td>05.06.2024 - 05.06.2024</td>
-                    <td>Ташкент -> Нячанг, ECONOM</td>
-                  </tr>
-                  <tr>
-                    <td>04.06.2024 - 04.06.2024</td>
-                    <td>SAPHIA HOTEL NHA TRANG 3*, Superior No Window/2Adl, BB</td>
-                  </tr>
-                  <tr>
-                    <td>04.06.2024 - 04.06.2024</td>
-                    <td>Трансфер: Airport-Hotel-Airport(NHA TRANG)</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>  
-            <h3 class="mb-3">Дополнительные услуги</h3>
-            <div class="table-responsive mb-4">
-              <table class="table table-striped table-hover">
-                <tbody>
-                  <tr>
-                    <td>04.06.2024 - 04.06.2024</td>
-                    <td>Баку -> Ташкент, ECONOM</td>
-                  </tr>
-                  <tr>
-                    <td>04.06.2024 - 13.06.2024</td>
-                    <td>Вьетнам: INSURANCE</td>
-                  </tr>
-                  <tr>
-                    <td>05.06.2024 - 05.06.2024</td>
-                    <td>Ташкент -> Нячанг, ECONOM</td>
-                  </tr>
-                  <tr>
-                    <td>04.06.2024 - 04.06.2024</td>
-                    <td>SAPHIA HOTEL NHA TRANG 3*, Superior No Window/2Adl, BB</td>
-                  </tr>
-                  <tr>
-                    <td>04.06.2024 - 04.06.2024</td>
-                    <td>Трансфер: Airport-Hotel-Airport(NHA TRANG)</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>  
+    <!-- Tour view modal -->
+    <div class="modal fade" id="tourDetail" tabindex="-1" style="display: block;" aria-modal="true" role="dialog">
+      <div class="modal-dialog modal-lg modal-simple modal-enable-otp modal-dialog-centered">
+        <div class="modal-content p-3 p-md-5">
+          <div class="modal-body">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <h3 class="mb-3">Состав пакета</h3>
+              <div class="table-responsive mb-4">
+                <table class="table table-striped table-hover">
+                  <tbody>
+                    <tr>
+                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>Баку -> Ташкент, ECONOM</td>
+                    </tr>
+                    <tr>
+                      <td>04.06.2024 - 13.06.2024</td>
+                      <td>Вьетнам: INSURANCE</td>
+                    </tr>
+                    <tr>
+                      <td>05.06.2024 - 05.06.2024</td>
+                      <td>Ташкент -> Нячанг, ECONOM</td>
+                    </tr>
+                    <tr>
+                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>SAPHIA HOTEL NHA TRANG 3*, Superior No Window/2Adl, BB</td>
+                    </tr>
+                    <tr>
+                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>Трансфер: Airport-Hotel-Airport(NHA TRANG)</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>  
+              <h3 class="mb-3">Дополнительные услуги</h3>
+              <div class="table-responsive mb-4">
+                <table class="table table-striped table-hover">
+                  <tbody>
+                    <tr>
+                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>Баку -> Ташкент, ECONOM</td>
+                    </tr>
+                    <tr>
+                      <td>04.06.2024 - 13.06.2024</td>
+                      <td>Вьетнам: INSURANCE</td>
+                    </tr>
+                    <tr>
+                      <td>05.06.2024 - 05.06.2024</td>
+                      <td>Ташкент -> Нячанг, ECONOM</td>
+                    </tr>
+                    <tr>
+                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>SAPHIA HOTEL NHA TRANG 3*, Superior No Window/2Adl, BB</td>
+                    </tr>
+                    <tr>
+                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>Трансфер: Airport-Hotel-Airport(NHA TRANG)</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>  
+            </div>
           </div>
-        </div>
       </div>
     </div>
-  </div>
+  </body>
+
+  
 
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
