--- a/tour.html
+++ b/tour.html
@@ -738,7 +738,7 @@
                               <a href="./tour-order.html">Tur nomi</a>
                             </td>
                             <td>
-                               6.06.2024 - 20.06.2024
+                               6.06.2024, 09:10 - 20.06.2024, 09:10
                             </td>
                             <td>
                               <button class="btn p-1" data-bs-toggle="modal" data-bs-target="#tourDetail">
@@ -758,13 +758,39 @@
                               </button>
                             </td>
                           </tr>
-                          <tr>
+                          <tr class="table-warning">
                             <td>1</td>
                             <td>
                               <a href="./tour-order.html">Tur nomi</a>
                             </td>
                             <td>
-                              2.07.2024 - 16.07.2024
+                               6.06.2024, 09:10 - 20.06.2024, 09:10
+                            </td>
+                            <td>
+                              <button class="btn p-1" data-bs-toggle="modal" data-bs-target="#tourDetail">
+                                <i class="fas fa-file"></i>
+                              </button>
+                            </td>
+                            <td>14</td>
+                            <td>15 750 000</td>
+                            <td>12 / 45</td>
+                            <td>Toshkent</td>
+                            <td>
+                              <a class="btn p-1" href="./tour-order.html">
+                                <i class="fas fa-pen"></i>
+                              </a>
+                              <button class="btn p-1">
+                                <i class="fas fa-trash"></i>
+                              </button>
+                            </td>
+                          </tr>
+                          <tr class="table-danger">
+                            <td>1</td>
+                            <td>
+                              <a href="./tour-order.html">Tur nomi</a>
+                            </td>
+                            <td>
+                              2.07.2024, 09:10 - 16.07.2024, 09:10
                             </td>
                             <td>
                               <button class="btn p-1" data-bs-toggle="modal" data-bs-target="#tourDetail">
@@ -784,13 +810,13 @@
                               </button>
                             </td>
                           </tr>
-                          <tr>
+                          <tr class="table-success">
                             <td>3</td>
                             <td>
                               <a href="./tour-order.html">Tur nomi</a>
                             </td>
                             <td>
-                              5.09.2024 - 15.09.2024
+                              5.09.2024, 09:10 - 15.09.2024, 09:10
                             </td>
                             <td>
                               <button class="btn p-1" data-bs-toggle="modal" data-bs-target="#tourDetail">
@@ -897,23 +923,23 @@
                 <table class="table table-striped table-hover">
                   <tbody>
                     <tr>
-                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>04.06.2024, - 04.06.2024,</td>
                       <td>Баку -> Ташкент, ECONOM</td>
                     </tr>
                     <tr>
-                      <td>04.06.2024 - 13.06.2024</td>
+                      <td>04.06.2024, - 13.06.2024,</td>
                       <td>Вьетнам: INSURANCE</td>
                     </tr>
                     <tr>
-                      <td>05.06.2024 - 05.06.2024</td>
+                      <td>05.06.2024, - 05.06.2024,</td>
                       <td>Ташкент -> Нячанг, ECONOM</td>
                     </tr>
                     <tr>
-                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>04.06.2024, - 04.06.2024,</td>
                       <td>SAPHIA HOTEL NHA TRANG 3*, Superior No Window/2Adl, BB</td>
                     </tr>
                     <tr>
-                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>04.06.2024, - 04.06.2024,</td>
                       <td>Трансфер: Airport-Hotel-Airport(NHA TRANG)</td>
                     </tr>
                   </tbody>
@@ -924,23 +950,23 @@
                 <table class="table table-striped table-hover">
                   <tbody>
                     <tr>
-                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>04.06.2024, - 04.06.2024,</td>
                       <td>Баку -> Ташкент, ECONOM</td>
                     </tr>
                     <tr>
-                      <td>04.06.2024 - 13.06.2024</td>
+                      <td>04.06.2024, - 13.06.2024,</td>
                       <td>Вьетнам: INSURANCE</td>
                     </tr>
                     <tr>
-                      <td>05.06.2024 - 05.06.2024</td>
+                      <td>05.06.2024, - 05.06.2024,</td>
                       <td>Ташкент -> Нячанг, ECONOM</td>
                     </tr>
                     <tr>
-                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>04.06.2024, - 04.06.2024,</td>
                       <td>SAPHIA HOTEL NHA TRANG 3*, Superior No Window/2Adl, BB</td>
                     </tr>
                     <tr>
-                      <td>04.06.2024 - 04.06.2024</td>
+                      <td>04.06.2024, - 04.06.2024,</td>
                       <td>Трансфер: Airport-Hotel-Airport(NHA TRANG)</td>
                     </tr>
                   </tbody>
