--- a/tour-create.html
+++ b/tour-create.html
@@ -18,6 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/core.css" />
     <link rel="stylesheet" href="./css/theme-default.css" />
     <link rel="stylesheet" href="./css/demo.css" />
@@ -224,14 +225,14 @@
                           />
                         </div>
                         <div class="mb-3 col-md-4 col-6">
-                          <label class="form-label" for="hostel-address_uz"
-                            >Mehmonxona</label
-                          >
-                          <select name="" id="" class="form-select">
-                            <option value="1">Hilton</option>
-                            <option value="1">Wyndham</option>
-                            <option value="1">City Palace</option>
-                          </select>
+                          <div class="form-group">
+                            <label class="form-label" for="exampleSelect">Mehmonxona</label>
+                            <select class="form-select select2" id="exampleSelect" multiple="multiple" style="width: 100%;">
+                              <option value="option1">Hilton</option>
+                              <option value="option2">Wyndham</option>
+                              <option value="option3">City Palace</option>
+                            </select>
+                          </div>
                         </div>
                         <div class="mb-3 col-md-4 col-6">
                           <label class="form-label" for="hostel-address_uz"
@@ -529,6 +530,8 @@
     </div>
   </body>
 
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -539,4 +542,12 @@
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"
   ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+
+  <script>
+    $(document).ready(function() {
+      // Initialize Select2
+      $('.select2').select2();
+    });
+  </script>
 </html>
